--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 
       <dependency>
           <groupId>org.apache.httpcomponents</groupId>
-          <artifactId>httpasyncclient</artifactId>
-          <version>4.0</version>
+          <artifactId>httpclient</artifactId>
+          <version>4.2.6</version>
       </dependency>
 
       <dependency>
